--- a/.gitignore
+++ b/.gitignore
@@ -97,31 +97,6 @@ fabric.properties
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-### Kotlin template
-# Compiled class file
-*.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-
 ### Gradle template
 .gradle
 **/build/
@@ -166,3 +141,14 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
+
+# Vanilla's addtions.
+# -- IntelliJ IDEA --
+.idea/
+*.iml
+# -- SQLite databases --
+*.db
+# -- Gradle --
+gradle/
+gradlew
+gradlew.bat
