[O] Correct comments according to suggestions

--- a/build.gradle
+++ b/build.gradle
@@ -75,6 +75,7 @@ compileTestKotlin {
     }
 }
 
+// Remove version number from jar name for deployment
 bootJar {
     archiveFileName = "${archiveBaseName.get()}.${archiveExtension.get()}"
 }
